syntax = "proto3";

package proto;

service TripService {
    rpc getAllTripByUserId (GetAllTripByUserIdRequest) returns (GetAllTripByUserIdResponse);
    rpc createTripPlan (CreateTripPlanRequest) returns (CreateTripPlanResponse);
    rpc createTripPlanByArchiveId (CreateTripPlanByArchiveIdRequest) returns (CreateTripPlanResponse);
}

service ArchiveService {
    rpc createArchive (CreateArchiveRequest) returns (CreateArchiveResponse);
    rpc addPlaceToArchive (AddPlaceToArchiveRequest) returns (AddPlaceToArchiveResponse);
    rpc getArchiveById (GetArchiveByIdRequest) returns (GetArchiveByIdResponse);
    rpc getAllArchiveByUserId (GetAllArchiveByUserIdRequest) returns (GetAllArchiveByUserIdResponse);
    rpc deletePlaceFromArchive (DeletePlaceFromArchiveRequest) returns (DeletePlaceFromArchiveResponse);
}

service PlaceService {
    rpc getPlaceByPlaceId (GetPlaceByPlaceIdRequest) returns (GetPlaceByPlaceIdResponse);
    rpc getAllPlaces (GetAllPlacesRequest) returns (GetAllPlacesResponse);
}

// trip plan message 


message Coordinate {
    string latitude = 1;
    string longtitude = 2;
    string latitudeDelta = 3;
    string longtitudeDelta = 4;
}

message Place {
    string _id = 1;
    string name = 2;
    string placeId = 3;
    string phone = 4;
    string website = 5;
    map<string, string> operatingHours = 6;
    string thumbnail = 7;
    repeated string images = 8;
    double latitude = 9;
    double longitude = 10;
    double latitudeDelta = 11;
    double longitudeDelta = 12;
    double rating = 13;
    string category = 14;
    int32 reviews = 15;
    int32 viewCount = 16;
    map<string, bool> serviceOptions = 17;
    string province = 18;
    string city = 19;
} 

message TripPlan {
    string authorId = 1;
    string title = 2;
    string startDate = 3;
    string endDate = 4;
    string vehicle = 5;
    string provinces = 6;
    string places = 7;
}

message Trip {
  string _id = 1;
  string authorId = 2;
  string title = 3;
  string startDate = 4;
  string endDate = 5;
  string vehicle = 6;
  repeated string provinces = 7;
  repeated Place places = 8;
  int32 viewCount = 9;
    bool isDraft = 10;
    bool isPublish = 11;
}

// get all trip by user id
message GetAllTripByUserIdRequest {
    string userId = 1;
}

message GetAllTripByUserIdResponse {
    repeated Trip data = 1;
}
//  create trip plan

message CreateTripPlanRequest {
    string authorId = 1;
    string title = 2;
}

message CreateTripPlanResponse {
    Trip data = 1;
}

message CreateTripPlanByArchiveIdRequest {
    string authorId = 1;
    string title = 2;
    string archiveId = 3;
}

//  

message Archive {
    string _id = 1;
    string authorId = 2;
    string title = 3;
    repeated Place places = 4;
    int32 placesNumber = 5;
}

message ArchiveDetail {
    string _id = 1;
    string authorId = 2;
    string title = 3;
    repeated Place places = 4;
    int32 placesNumber = 5;
}


message CreateArchiveRequest {
    string authorId = 1;
    string title = 2;
    repeated string places = 3;
}

message CreateArchiveResponse {
    Archive data = 1;
}

message AddPlaceToArchiveRequest{
    string placeId = 1;
    string archiveId = 2;
}

message AddPlaceToArchiveResponse {
    string message = 1;
}

message GetArchiveByIdRequest {
    string archiveId = 1;
}

message GetArchiveByIdResponse {
    Archive data = 1;
}

message GetAllArchiveByUserIdRequest {
    string userId = 1;
}

message GetAllArchiveByUserIdResponse {
    repeated Archive data = 1;
}

// 

message GetPlaceByPlaceIdRequest {
    string placeId = 1;
}

message GetPlaceByPlaceIdResponse {
    Place data = 1;
}

message GetAllPlacesRequest {
    int32 pageSize = 1;
    string lastId = 2;
}

message GetAllPlacesResponse {
    repeated Place data = 1;
    string lastId = 2;
}

message DeletePlaceFromArchiveRequest {
    string placeId = 1;
    string archiveId = 2;
}

message DeletePlaceFromArchiveResponse {
    string message = 1;
}